Avoid breaks inside statblocks

--- a/subprojects/pf2e_compendium/ttrpg_scribe/pf2e_compendium/flask/static/stat_block.css
+++ b/subprojects/pf2e_compendium/ttrpg_scribe/pf2e_compendium/flask/static/stat_block.css
@@ -10,6 +10,7 @@
         "name name level"
         "content content content";
     grid-template-columns: 1.5em 1fr 1fr;
+    break-inside: avoid;
 }
 .stat-block.has-collapser {
     grid-template-areas: 
